03-cluster-tools/22.istio-ambient/kiali-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio.io/dataplane-mode: ambient
