03-cluster-tools/22.istio-ambient/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-system
  labels:
    istio.io/rev: "1-25-0"
