03-cluster-tools/22.istio-ambient/kiali-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: kiali
  namespace: kiali-operator
  annotations:
    external-dns.alpha.kubernetes.io/hostname: kiali.akna.one.pl
spec:
  parentRefs:
    - name: internal-gateway
      namespace: gateway-api
  hostnames:
    - kiali.akna.one.pl
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kiali
          port: 20001
